adding options to get

--- a/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestAddAnnotatedEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestAddAnnotatedEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotablex88i6q4d2y7dd"}'
+    body: '{"TableName":"gotablepallqj0201avk"}'
     form: {}
     headers:
       Accept:
@@ -19,24 +19,24 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 15 Jul 2021 22:31:05 GMT
+      - Thu, 15 Jul 2021 22:58:44 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.cosmos.azure.com/Tables
     method: POST
   response:
-    body: '{"TableName":"gotablex88i6q4d2y7dd","odata.metadata":"https://seankaneprim.table.cosmos.azure.com/$metadata#Tables/@Element"}'
+    body: '{"TableName":"gotablepallqj0201avk","odata.metadata":"https://seankaneprim.table.cosmos.azure.com/$metadata#Tables/@Element"}'
     headers:
       Content-Type:
       - application/json;odata=minimalmetadata
       Date:
-      - Thu, 15 Jul 2021 22:31:06 GMT
+      - Thu, 15 Jul 2021 22:58:44 GMT
       Etag:
-      - W/"datetime'2021-07-15T22%3A31%3A06.4232968Z'"
+      - W/"datetime'2021-07-15T22%3A58%3A45.2678664Z'"
       Location:
-      - https://seankaneprim.table.cosmos.azure.com/Tables('gotablex88i6q4d2y7dd')
+      - https://seankaneprim.table.cosmos.azure.com/Tables('gotablepallqj0201avk')
       X-Ms-Request-Id:
-      - d26dc2b2-9fd7-4e1f-983b-0d403479e15e
+      - 3404ad65-df83-4669-a67e-d92d53a646a6
     status: 201 Created
     code: 201
     duration: ""
@@ -60,24 +60,24 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 15 Jul 2021 22:31:07 GMT
+      - Thu, 15 Jul 2021 22:58:45 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.cosmos.azure.com/gotablex88i6q4d2y7dd
+    url: https://seankaneprim.table.cosmos.azure.com/gotablepallqj0201avk
     method: POST
   response:
     body: ""
     headers:
       Date:
-      - Thu, 15 Jul 2021 22:31:06 GMT
+      - Thu, 15 Jul 2021 22:58:45 GMT
       Etag:
-      - W/"datetime'2021-07-15T22%3A31%3A07.1959048Z'"
+      - W/"datetime'2021-07-15T22%3A58%3A45.8681352Z'"
       Location:
-      - https://seankaneprim.table.cosmos.azure.com/gotablex88i6q4d2y7dd(PartitionKey='partition',RowKey='1')
+      - https://seankaneprim.table.cosmos.azure.com/gotablepallqj0201avk(PartitionKey='partition',RowKey='1')
       Preference-Applied:
       - return-no-content
       X-Ms-Request-Id:
-      - 26a8a98a-4e4a-4185-a91d-c54c594a04b8
+      - a6db774e-808f-4f3e-b391-749ca5c2f3d8
     status: 204 No Content
     code: 204
     duration: ""
@@ -95,22 +95,22 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 15 Jul 2021 22:31:07 GMT
+      - Thu, 15 Jul 2021 22:58:45 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.cosmos.azure.com/gotablex88i6q4d2y7dd(PartitionKey='partition',RowKey='1')
+    url: https://seankaneprim.table.cosmos.azure.com/gotablepallqj0201avk(PartitionKey='partition',RowKey='1')?%24format=application%2Fjson%3Bodata%3Dfullmetadata
     method: GET
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.cosmos.azure.com/gotablex88i6q4d2y7dd/$metadata#gotablex88i6q4d2y7dd/@Element","odata.etag":"W/\"datetime''2021-07-15T22%3A31%3A07.1959048Z''\"","Binary@odata.type":"Edm.Binary","Binary":"YmluYXJ5","Bool":true,"DateType@odata.type":"Edm.DateTime","DateType":"2021-04-01T01:01:01.0000000Z","FloatType":8589934592.0,"PartitionKey":"partition","RowKey":"1","Small":10,"Stringy":"somestring","large@odata.type":"Edm.Int64","large":"1125899906842624","Timestamp":"2021-07-15T22:31:07.1959048Z"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.cosmos.azure.com/gotablepallqj0201avk/$metadata#gotablepallqj0201avk/@Element","odata.etag":"W/\"datetime''2021-07-15T22%3A58%3A45.8681352Z''\"","Binary@odata.type":"Edm.Binary","Binary":"YmluYXJ5","Bool":true,"DateType@odata.type":"Edm.DateTime","DateType":"2021-04-01T01:01:01.0000000Z","FloatType":8589934592.0,"PartitionKey":"partition","RowKey":"1","Small":10,"Stringy":"somestring","large@odata.type":"Edm.Int64","large":"1125899906842624","Timestamp":"2021-07-15T22:58:45.8681352Z"}'
     headers:
       Content-Type:
       - application/json;odata=minimalmetadata
       Date:
-      - Thu, 15 Jul 2021 22:31:06 GMT
+      - Thu, 15 Jul 2021 22:58:45 GMT
       Etag:
-      - W/"datetime'2021-07-15T22%3A31%3A07.1959048Z'"
+      - W/"datetime'2021-07-15T22%3A58%3A45.8681352Z'"
       X-Ms-Request-Id:
-      - 106301f7-5016-4496-a09b-fc1ac8883c33
+      - 24c82b14-f148-47b0-b6ef-c6b7523a8e5b
     status: 200 OK
     code: 200
     duration: ""
@@ -128,20 +128,20 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 15 Jul 2021 22:31:07 GMT
+      - Thu, 15 Jul 2021 22:58:46 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.cosmos.azure.com/gotablex88i6q4d2y7dd()?%24filter=PartitionKey+eq+%27partition%27
+    url: https://seankaneprim.table.cosmos.azure.com/gotablepallqj0201avk()?%24filter=PartitionKey+eq+%27partition%27
     method: GET
   response:
-    body: '{"value":[{"odata.etag":"W/\"datetime''2021-07-15T22%3A31%3A07.1959048Z''\"","Binary@odata.type":"Edm.Binary","Binary":"YmluYXJ5","Bool":true,"DateType@odata.type":"Edm.DateTime","DateType":"2021-04-01T01:01:01.0000000Z","FloatType":8589934592.0,"PartitionKey":"partition","RowKey":"1","Small":10,"Stringy":"somestring","large@odata.type":"Edm.Int64","large":"1125899906842624","Timestamp":"2021-07-15T22:31:07.1959048Z"}],"odata.metadata":"https://seankaneprim.table.cosmos.azure.com/$metadata#gotablex88i6q4d2y7dd"}'
+    body: '{"value":[{"odata.etag":"W/\"datetime''2021-07-15T22%3A58%3A45.8681352Z''\"","Binary@odata.type":"Edm.Binary","Binary":"YmluYXJ5","Bool":true,"DateType@odata.type":"Edm.DateTime","DateType":"2021-04-01T01:01:01.0000000Z","FloatType":8589934592.0,"PartitionKey":"partition","RowKey":"1","Small":10,"Stringy":"somestring","large@odata.type":"Edm.Int64","large":"1125899906842624","Timestamp":"2021-07-15T22:58:45.8681352Z"}],"odata.metadata":"https://seankaneprim.table.cosmos.azure.com/$metadata#gotablepallqj0201avk"}'
     headers:
       Content-Type:
       - application/json;odata=minimalmetadata
       Date:
-      - Thu, 15 Jul 2021 22:31:06 GMT
+      - Thu, 15 Jul 2021 22:58:45 GMT
       X-Ms-Request-Id:
-      - 543cf9a4-9d76-4b11-a0d9-da8bf146b015
+      - 84a2c26f-242e-4766-93f7-a4d0ea6066e2
     status: 200 OK
     code: 200
     duration: ""
@@ -157,18 +157,18 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 15 Jul 2021 22:31:07 GMT
+      - Thu, 15 Jul 2021 22:58:46 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.cosmos.azure.com/Tables('gotablex88i6q4d2y7dd')
+    url: https://seankaneprim.table.cosmos.azure.com/Tables('gotablepallqj0201avk')
     method: DELETE
   response:
     body: ""
     headers:
       Date:
-      - Thu, 15 Jul 2021 22:31:07 GMT
+      - Thu, 15 Jul 2021 22:58:45 GMT
       X-Ms-Request-Id:
-      - c9fcb328-f3d5-40ca-b747-f2f5911a510c
+      - 89a2a4a0-0431-420b-849a-ba02de9e4846
     status: 204 No Content
     code: 204
     duration: ""
